--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  </head>
 
  <body>
+   <div id="refrence">
 
     <a href="#introduction"><h3>Introduction</h3></a>
     <nav class="introduction-menu">
@@ -22,9 +23,11 @@
           <li><a href="#day 4">Day 4</a></li>
         </ul>
       </nav>
+   </div>
 
+
+   <div id="introduction">
     <h1>A documentation about the first time trying to use HTML!</h1>
-    <div id="introduction">
         <h2 id="about me">About Me</h2>
             <p>Hi! I'm Vuke, currently 15 years old as of 29th of October, 2021 it's currently 5:32 AM, and my birthday is in 10 day. I really like to code. Coding has, pretty much, become my side hoppy, and I really liked the idea of it so I started of learing Javascript through making bots on Discord. I also have grown a <a href="https://www.youtube.com/vukefn" target="_blank">Youtube channel</a> to 2.5k Subscribers and growing. The channel name is VukeFN.</p>
 
@@ -48,7 +51,57 @@
         <h3>End of day 2</h3>
         <img src="C:\Users\Abdelrahman\Downloads\End of day 2.png" width="420" height="240" />
 
-        
+        <h3 id="day 3">Day 3</h3>
+        <p>Here is a list of what I learned today.</p>
+        <ol>
+          <li>I can make tables:</li><br>
+          <table border="3">
+            <tr>
+              <th></th>
+              <th>1st Period</th>
+              <th>2nd Period</th>
+              <th>3rd Period</th>
+              <th>4th Period</th>
+            </tr>
+            <tr>
+              <th>Sunday</th>
+              <td>World History</td>
+              <td colspan="2">English</td>
+              <td>PE</td>
+            </tr>
+            <tr>
+              <th>Monday</th>
+              <td>English</td>
+              <td>Chemistry</td>
+              <td>German</td>
+              <td>Pre Calculus</td>
+            </tr>
+            <tr>
+              <th>Tuesday</th>
+              <td>Chemistry</td>
+              <td>Pre Calculus</td>
+              <td colspan="2">World History</td>
+            </tr>
+            <tr>
+              <th>Wednesday</th>
+              <td>Pre Caculus</td>
+              <td colspan="2">Geography</td>
+              <td>English</td>
+            </tr>
+            <tr>
+              <th>Thursday</th>
+              <td>English</td>
+              <td>Art</td>
+              <td>ICT</td>
+              <td>Pre Calculus</td>
+            </tr>
+          </table><br>
+          <li>I can add borders to images and tables. (like above)</li><br>
+          <img src="https://ix-www.imgix.net/hp/snowshoe.jpg?q=70&w=1800&auto=compress%2Cenhance&fm=jpeg" width="420" height="240" border="3" />
+        </ol>
+
+        <h3>End of day 3</h3>
+        <img src="C:\Users\Abdelrahman\Downloads\End of day 3.png" width="420" height="240" border="3" />
 
     </div>
  </body>
