--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li>you haven't noticed yet? I added line breakers. I will add 3 after this line</li><br><br><br>
         </ol>
         <h3>End of day 2</h3>
-        <img src="https://i.ibb.co/sQqHFyR/End-of-day-2.png" width="420" height="240" />
+        <img src="https://i.ibb.co/sQqHFyR/End-of-day-2.png" width="420" height="240" border="3" />
 
         <h3 id="day 3">Day 3</h3>
         <p>Here is a list of what I learned today.</p>
