--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>First Project!</title>
  </head>
 
- <body>
-   <div id="reference">
+  <body>
+    <div id="reference">
 
     <a href="#introduction"><h3>Introduction</h3></a>
     <nav class="introduction-menu">
@@ -23,10 +23,9 @@
           <li><a href="#day 4">Day 4</a></li>
         </ul>
       </nav>
-   </div>
+    </div>
 
-
-   <div id="introduction">
+    <div id="introduction">
     <h1>A documentation about the first time trying to use HTML!</h1>
         <h2 id="about me">About Me</h2>
             <p>Hi! I'm Vuke, currently 15 years old as of 29th of October, 2021 it's currently 5:32 AM, and my birthday is in 10 day. I really like to code. Coding has, pretty much, become my side hoppy, and I really liked the idea of it so I started of learing Javascript through making bots on Discord. I also have grown a <a href="https://www.youtube.com/vukefn" target="_blank">Youtube channel</a> to 2.5k Subscribers and growing. The channel name is VukeFN.</p>
@@ -34,9 +33,11 @@
         <h2 id="why html">Why I chose HTML</h2>
             <p>Personally I have tried so many languages and I just feel like it's about time that I should try out HTML. It's the building block of almost all website, and I think it will benift me in the long run. There is this very helpful website called <a href="https://www.codecademy.com/" target="_blank">codecademy</a>, It's the website that I learned all of the languages I know today.</p>
     </div>
+
     <div id="updates">
-        <br><br><h1>Daily Updates</h1>
-        <h3 id="day 2">Day 2</h3>
+      <br><br><h1>Daily Updates</h1>
+      <div id="day 2">
+        <h3>Day 2</h3>
         <p>Here is a list of what I learned today.</p>
         <ol>
             <li>Hey that's the first thing. I can do lists now :></li><br>
@@ -50,8 +51,9 @@
         </ol>
         <h3>End of day 2</h3>
         <img src="https://i.ibb.co/sQqHFyR/End-of-day-2.png" width="420" height="240" border="3" />
-
-        <h3 id="day 3">Day 3</h3>
+      </div>
+      <div id="day 3"> 
+        <h3>Day 3</h3>
         <p>Here is a list of what I learned today.</p>
         <ol>
           <li>I can make tables:</li><br>
@@ -102,8 +104,8 @@
 
         <h3>End of day 3</h3>
         <img src="https://i.ibb.co/Hr72bMs/End-of-day-3.png" width="420" height="240" border="3" />
-
+      </div>
     </div>
- </body>
 
+  </body>
 </html>
