--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </ol>
 
         <h3>End of Day 4</h3>
-        <img src="https://i.ibb.co/5rZnNvc/End-of-day-4.png" width="320" height="524" border="3" />
+        <a href="https://i.ibb.co/5rZnNvc/End-of-day-4.png"><img src="https://i.ibb.co/5rZnNvc/End-of-day-4.png" width="320" height="524" border="3" /></a>
       </div>
     </div>
 
