--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </ol>
 
         <h3>End of day 3</h3>
-        <img src="https://i.ibb.co/Hr72bMs/End-of-day-3.png" width="420" height="240" border="3" />
+        <a href="https://i.ibb.co/Hr72bMs/End-of-day-3.png" target="_blank"><img src="https://i.ibb.co/Hr72bMs/End-of-day-3.png" width="420" height="240" border="3" /></a>
       </div>
       <div id="day 4">
         <h3>Day 4</h3>
@@ -191,7 +191,7 @@
         </ol>
 
         <h3>End of Day 4</h3>
-        <a href="https://i.ibb.co/5rZnNvc/End-of-day-4.png"><img src="https://i.ibb.co/5rZnNvc/End-of-day-4.png" width="320" height="524" border="3" /></a>
+        <a href="https://i.ibb.co/5rZnNvc/End-of-day-4.png" target="_blank"><img src="https://i.ibb.co/5rZnNvc/End-of-day-4.png" width="320" height="524" border="3" /></a>
       </div>
     </div>
 
