--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
  </head>
 
   <body>
-    <main>
       <header>
         <h3>Navigation</h3>
         <nav>
@@ -26,7 +25,7 @@
         </nav>
       </header>
 
-      <div id="introduction">
+      <section id="introduction">
         <h1>A documentation about the first time trying to use HTML and styling it using CSS!</h1>
 
         <h2 id="about me">About Me</h2>
@@ -34,12 +33,13 @@
 
         <h2 id="why html">Why I chose HTML</h2>
         <p>Personally I have tried so many languages and I just feel like it's about time that I should try out HTML. It's the building block of almost all website, and I think it will benift me in the long run. There is this very helpful website called <a href="https://www.codecademy.com/" target="_blank">codecademy</a>, It's the website that I learned all of the languages I know today.</p>
-      </div>
+      </section>
 
-      <div id="updates">
+    <main>
+      <section id="updates">
         <br>
-        <h1>Daily Updates</h1>
-        <div id="day 2">
+        <h2>Daily Updates</h2>
+        <article id="day 2">
           <h3>Day 2</h3>
           <p>Here is a list of what I learned today.</p>
           <ol>
@@ -53,10 +53,14 @@
             <li>I can make text <em>Italic</em> and <strong>Bold</strong></li><br>
             <li>you haven't noticed yet? I added line breakers. I will add 3 after this line</li><br><br><br>
           </ol>
-          <h3>End of day 2</h3>
-          <img src="https://i.ibb.co/sQqHFyR/End-of-day-2.png" width="420" height="240" border="3" />
-        </div>
-        <div id="day 3"> 
+          <hr width="30%" align="left">
+          <figure>
+            <a href="https://i.ibb.co/sQqHFyR/End-of-day-2.png" target="_blank"><img src="https://i.ibb.co/sQqHFyR/End-of-day-2.png" width="420" height="240" border="3" /></a>
+            <figcaption style="margin-left: 8%;">End Result of Day 2</figcaption>
+          </figure>
+        </article>
+        <br>
+        <article id="day 3"> 
           <h3>Day 3</h3>
           <p>Here is a list of what I learned today.</p>
           <ol>
@@ -105,11 +109,15 @@
             <li>I can add borders to images and tables. (like above)</li><br>
             <img src="https://ix-www.imgix.net/hp/snowshoe.jpg?q=70&w=1800&auto=compress%2Cenhance&fm=jpeg" width="420" height="240" border="3" />
           </ol>
-
-          <h3>End of day 3</h3>
-          <a href="https://i.ibb.co/Hr72bMs/End-of-day-3.png" target="_blank"><img src="https://i.ibb.co/Hr72bMs/End-of-day-3.png" width="420" height="240" border="3" /></a>
-        </div>
-        <div id="day 4">
+          <br>
+          <hr width="30%" align="left">
+          <figure>
+            <a href="https://i.ibb.co/Hr72bMs/End-of-day-3.png" target="_blank"><img src="https://i.ibb.co/Hr72bMs/End-of-day-3.png" width="420" height="240" border="3" /></a>
+            <figcaption style="margin-left: 8%;">End Result of Day 3</figcaption>
+          </figure>
+        </article>
+        <br>
+        <article id="day 4">
           <h3>Day 4</h3>
           <p>Here is what I learned today.</p>
           <ol>
@@ -193,11 +201,15 @@
             </form><br><br>
             <p>There is so much more than you see going on. Every button in this form has it's own special code that needs to work together to make this form. From Dropdown Menus to The submit button. I will learn CSS so I can style the website, and you can see the before and after at the end of each day.</p>
           </ol>
-
-          <h3>End of Day 4</h3>
-          <a href="https://i.ibb.co/5rZnNvc/End-of-day-4.png" target="_blank"><img src="https://i.ibb.co/5rZnNvc/End-of-day-4.png" width="320" height="524" border="3" /></a>
-        </div>
-      </div>
+          <br>
+          <hr width="30%" align="left">
+          <figure>
+            <a href="https://i.ibb.co/5rZnNvc/End-of-day-4.png" target="_blank"><img src="https://i.ibb.co/5rZnNvc/End-of-day-4.png" width="320" height="524" border="3" /></a>
+            <figcaption style="margin-left: 5%;">End Result of Day 4</figcaption>
+          </figure>
+        </article>
+        <br>
+      </section>
     </main>
   </body>
 </html>
