--- a/index.html
+++ b/index.html
@@ -7,21 +7,31 @@
 
   <body>
       <header>
-        <h3>Navigation</h3>
         <nav>
+          <h3>Navigation</h3>
           <ul>
             <li><a href="#introduction">Introduction</a></li>
             <li><a href="#about me">About Me</a></li>
             <li><a href="#why html">Why HTML?</a></li>
           </ul>
         </nav>
-        <h3>Updates</h3>
         <nav>
+          <h3>HTML Updates</h3>
           <ul>
-            <li><a href="#day 2">Day 2</a></li>
-            <li><a href="#day 3">Day 3</a></li>
-            <li><a href="#day 4">Day 4</a></li>
+            <li><a href="#html day 2">Day 2</a></li>
+            <li><a href="#html day 3">Day 3</a></li>
+            <li><a href="#html day 4">Day 4</a></li>
+            <li><a href="#html day 5">Day 5</a></li>
           </ul>
+        </nav>
+        <nav>
+        <h3>CSS Updates</h3>
+        <ul>
+          <li><a href="#css day 1">Day 1</a></li>
+          <li><a href="#css day 2">Day 2</a></li>
+          <li><a href="#css day 3">Day 3</a></li>
+          <li><a href="#css day 4">Day 4</a></li>
+        </ul>
         </nav>
       </header>
 
@@ -36,10 +46,11 @@
       </section>
 
     <main>
-      <section id="updates">
+      <section id="html updates">
         <br>
-        <h2>Daily Updates</h2>
-        <article id="day 2">
+        <h2>Daily HTML Updates</h2>
+
+        <article id="html day 2">
           <h3>Day 2</h3>
           <p>Here is a list of what I learned today.</p>
           <ol>
@@ -60,7 +71,9 @@
           </figure>
         </article>
         <br>
-        <article id="day 3"> 
+
+
+        <article id="html day 3"> 
           <h3>Day 3</h3>
           <p>Here is a list of what I learned today.</p>
           <ol>
@@ -117,7 +130,9 @@
           </figure>
         </article>
         <br>
-        <article id="day 4">
+
+
+        <article id="html day 4">
           <h3>Day 4</h3>
           <p>Here is what I learned today.</p>
           <ol>
@@ -209,6 +224,35 @@
           </figure>
         </article>
         <br>
+
+
+        <article id="html day 5">
+          <h3>Day 5</h3>
+          <p>here is what I learned today.</p>
+          <ol>
+            <li>I just mainly learned some stuff that is only visible in the actuall code and not in the webpage. I made the code more organized and helped it's readablility.<aside><br> Tip: you can right click and select inspect to see the code of the website.</li></aside>
+            <li>I also learned Form validation which adds additional measurements to forms.</li>
+            <li>The next days are going to be about CSS and the Journey of learning it.</li>
+          </ol>
+          <br>
+          <hr width="30%" align="left">
+          <figure>
+            <a href="https://i.ibb.co/sWwX04Q/End-of-day-5.png" target="_blank"><img src="https://i.ibb.co/sWwX04Q/End-of-day-5.png" width="210" height="475" border="3" /></a>
+            <figcaption style="margin-left: 2%;">End Result of Day 4</figcaption>
+          </figure>
+        </article>
+        <br>
+      </section>
+
+
+
+      <section id="css updates">
+        <br>
+        <h2>Daily CSS Updates</h2>
+        <article id="css day 1">
+          <h3>Day 1</h3>
+          <p>Here is what I learned today.</p>
+        </article>
       </section>
     </main>
   </body>
