--- a/Videos/videos.html
+++ b/Videos/videos.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" href="./Images/Website Icon.png" />
-    <script src="./main.js"></script>
-    <title>VukeFN | Home</title>
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="icon" href="../Images/Website Icon.png" />
+    <script src="../main.js"></script>
+    <title>VukeFN | Videos</title>
 </head>
 
 <body>
     <header>
         <nav class="nav">
             <div class="logo">
-                <img src="./Images/Website Logo.png" alt="Website's Logo" height="80" width="240" />
+                <img src="../Images/Website Logo.png" alt="Website's Logo" height="80" width="240" />
             </div>
             <div class="nav-items-div">
                 <ul class="nav-list">
@@ -55,7 +55,7 @@
             <div class="videos-grid">
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/Clix Team Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/Clix Team Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make Clix Team Selector</p>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/Clix Loadout Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/Clix Loadout Selector 2.png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make Clix Loadout Selector</p>
@@ -71,7 +71,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE Trolling Room (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE Trolling Room (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Trolling Room (Part 3)</p>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/Arena Scoreboard in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/Arena Scoreboard in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make a Working Arena Scoreboard</p>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/Build Reset Remote in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/Build Reset Remote in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make Build Reset Remote</p>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/Reboot Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/Reboot Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make Reboot Mechanic</p>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/1v1 Arena Scoring System in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/1v1 Arena Scoring System in Fortnite.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">1v1 Arena Scoring System (Old)</p>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/Team Selector Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/Team Selector Mechanic.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">
@@ -121,7 +121,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE Trolling Room (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE Trolling Room (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Trolling Room (Part 2)</p>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE Trolling Room.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE Trolling Room.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Trolling Room (Part 1)</p>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make Clix Box Fights Map (FULL).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make Clix Box Fights Map (FULL).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make Clix Boxfights Map</p>
@@ -145,7 +145,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/BHE Start Island.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/BHE Start Island.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Start Island</p>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/BHE Spawn Island (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/BHE Spawn Island (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Spawn Island (Part 2)</p>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/BHE Spawn Island (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/BHE Spawn Island (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Spawn Island (Part 1)</p>
@@ -169,7 +169,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE Boxfights Map (Part 5).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE Boxfights Map (Part 5).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Boxfights Map (Part 5)</p>
@@ -177,7 +177,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE Boxfights Map (Part 4).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE Boxfights Map (Part 4).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Boxfights Map (Part 4)</p>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make First Person Mechanic.png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make First Person Mechanic.png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">
@@ -195,7 +195,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE Boxfights Map (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE Boxfights Map (Part 3).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Boxfights Map (Part 3)</p>
@@ -203,7 +203,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE Boxfights Map (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE Boxfights Map (Part 2).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Boxfights Map (Part 2)</p>
@@ -211,7 +211,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE Boxfights Map (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE Boxfights Map (Part 1).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE Boxfights Map (Part 1)</p>
@@ -219,7 +219,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/Emote to Change Loadout.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/Emote to Change Loadout.jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make Emote to Change Loadout</p>
@@ -227,7 +227,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE 1v1 Map (Part 7).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 7).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 7)</p>
@@ -235,7 +235,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE 1v1 Map (Part 6).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 6).jpg" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 6)</p>
@@ -243,7 +243,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE 1v1 Map (Part 5).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 5).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 5)</p>
@@ -251,7 +251,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE 1v1 Map (Part 4).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 4).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 4)</p>
@@ -259,7 +259,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 3).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 3)</p>
@@ -267,7 +267,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE 1v1 Map (Part 2).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 2).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 2)</p>
@@ -275,7 +275,7 @@
                 </div>
                 <div class="video">
                     <a href="#">
-                        <img src="./Thumbnails/How to Make BHE 1v1 Map (Part 1).png" alt="Thumbnail" class="video-thumbnail" width="216" />
+                        <img src="../Thumbnails/How to Make BHE 1v1 Map (Part 1).png" alt="Thumbnail" class="video-thumbnail" width="216" />
                     </a>
                     <a href="#">
                         <p class="video-title">How to Make BHE 1v1 Map (Part 1)</p>
