--- a/Videos/videos.html
+++ b/Videos/videos.html
@@ -33,10 +33,10 @@
                     <ion-icon name="menu-outline" id="nav-menu-icon" onclick="openNav()"></ion-icon>
                     <div class="nav-menu" id="nav-menu">
                         <li class="item">
-                            <a href="https://VukeFN.github.io">HOME</a>
+                            <a href="https://VukeFN.github.io/Home/home.html">HOME</a>
                         </li>
                         <li class="item">
-                            <a href="https://VukeFN.github.io/videos">VIDEOS</a>
+                            <a href="https://VukeFN.github.io/Videos/videos.html">VIDEOS</a>
                         </li>
                         <li class="item">
                             <a href="https://discord.gg/uzjyMmG">DISCORD</a>
