--- a/Videos/videos.html
+++ b/Videos/videos.html
@@ -20,10 +20,10 @@
             <div class="nav-items-div">
                 <ul class="nav-list">
                     <li class="item">
-                        <a href="https://VukeFN.github.io">HOME</a>
+                        <a href="https://VukeFN.github.io/Home/home.html">HOME</a>
                     </li>
                     <li class="item">
-                        <a href="https://VukeFN.github.io/videos">VIDEOS</a>
+                        <a href="https://VukeFN.github.io/Videos/videos.html">VIDEOS</a>
                     </li>
                     <li class="item">
                         <a href="https://discord.gg/uzjyMmG">DISCORD</a>
