--- a/Home/home.html
+++ b/Home/home.html
@@ -20,7 +20,7 @@
                         <a href="https://VukeFN.github.io/Home/home.html">HOME</a>
                     </li>
                     <li class="item">
-                        <a href="https://VukeFN.github.io/Videos/videos.html">VIDEOS</a>
+                        <a href="https://VukeFN.github.io/Videos/">VIDEOS</a>
                     </li>
                     <li class="item">
                         <a href="https://discord.gg/uzjyMmG">DISCORD</a>
