--- a/Home/home.html
+++ b/Home/home.html
@@ -12,7 +12,8 @@
     <header>
         <nav class="nav">
             <div class="logo">
-                <img src="../Images/Website Logo.png" alt="Website's Logo" height="80" width="240" />
+                <a href="https://www.youtube.com/c/vukefn"><img src="../Images/Website Logo.png" alt="Website's Logo" height="80" width="240" />
+                </a>
             </div>
             <div class="nav-items-div">
                 <ul class="nav-list">
