--- a/Videos/videos.html
+++ b/Videos/videos.html
@@ -21,7 +21,7 @@
             <div class="nav-items-div">
                 <ul class="nav-list">
                     <li class="item">
-                        <a href="https://VukeFN.github.io/Home/home.html">HOME</a>
+                        <a href="https://VukeFN.github.io/">HOME</a>
                     </li>
                     <li class="item">
                         <a href="https://VukeFN.github.io/Videos/videos.html">VIDEOS</a>
