--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -47,9 +50,7 @@
 
     <main id="main">
         <section>
-            <div class="videos-grid">
-
-            </div>
+            <div class="videos-grid"></div>
         </section>
     </main>
 
