Home 1st update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./home.css" />
     <link rel="icon" href="./Images/Website Icon.png" />
     <script src="./main.js"></script>
     <title>VukeFN | Videos</title>
@@ -49,9 +49,26 @@
     </header>
 
     <main id="main">
-        <section>
-            <div class="videos-grid"></div>
+        <section class="grid-item">
+            <img src="" alt="welcome image" />
         </section>
+        <section class="grid-item"></section>
+        <section class="grid-item">
+            <h1>GETTING STARTED!</h1>
+            <p>Go to the Videos Page.</p>
+            <a href="https://VukeFN.github.io/Videos/videos.html">VIDEOS</a>
+        </section>
+        <section class="grid-item"></section>
+        <section class="grid-item"></section>
+        <section class="grid-item">
+            <h1>JUST ONE CLICK!</h1>
+            <p>Select your desired video in just 1 click.</p>
+        </section>
+        <section class="grid-item">
+            <h1>NO MORE PROBLEMS!</h1>
+            <p>Easily check the fix for your problem.</p>
+        </section>
+        <section class="grid-item"></section>
     </main>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
