--- a/Videos/playlists.html
+++ b/Videos/playlists.html
@@ -5,18 +5,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./home.css" />
-    <link rel="icon" href="./Images/Website Icon.png" />
-    <script src="./main.js"></script>
+    <link rel="stylesheet" href="../video.css" />
+    <link rel="icon" href="../Images/Website Icon.png" />
+    <script src="../video.js"></script>
     <title>VukeFN | Videos</title>
 </head>
 
-<body>
+<body id="body">
     <header>
         <nav class="nav">
             <div class="logo">
-                <a href="https://vukefn.github.io/">
-                    <img src="./Images/Website Logo.png" alt="Website's Logo" height="80" width="240" />
+                <a href="https://vukefn.github.io/"><img src="../Images/Website Logo.png" alt="Website's Logo" height="80" width="240" />
                 </a>
                 <a href="https://youtube.com/c/vukefn" target="blank_">
                     <img class="social-media" src="./Images/YouTube.png" />
@@ -60,28 +59,10 @@
         </nav>
     </header>
 
-    <main id="main">
-        <section class="grid-item">
-            <img src="" alt="welcome image" />
-        </section>
-        <section class="grid-item"></section>
-        <section class="grid-item">
-            <h1>GETTING STARTED!</h1>
-            <p>Go to the Videos Page.</p>
-            <a href="https://VukeFN.github.io/Videos/videos.html">VIDEOS</a>
-        </section>
-        <section class="grid-item"></section>
-        <section class="grid-item"></section>
-        <section class="grid-item">
-            <h1>JUST ONE CLICK!</h1>
-            <p>Select your desired video in just 1 click.</p>
-        </section>
-        <section class="grid-item">
-            <h1>NO MORE PROBLEMS!</h1>
-            <p>Easily check the solution for your problem.</p>
-        </section>
-        <section class="grid-item"></section>
-    </main>
+    <!-- ========== MAIN ========== -->
+    <main id="main">under construction</main>
+
+    <!-- ========== SCRIPTS ========== -->
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
