--- a/Videos/videos.html
+++ b/Videos/videos.html
@@ -15,13 +15,37 @@
     <header>
         <nav class="nav">
             <div class="logo">
-                <a href="https://www.youtube.com/c/vukefn"><img src="../Images/Website Logo.png" alt="Website's Logo" height="80" width="240" />
+                <a href="https://vukefn.github.io/"><img src="../Images/Website Logo.png" alt="Website's Logo" height="80" width="240" />
+                </a>
+                <a href="https://youtube.com/c/vukefn" target="blank_">
+                    <img class="social-media" src="https://img.icons8.com/ios/50/000000/youtube-play--v1.png" />
+                </a>
+                <a href="https://discord.gg/uzjyMmG" target="blank_">
+                    <img class="social-media" src="https://img.icons8.com/ios/50/000000/discord-logo--v1.png" />
+                </a>
+                <a href="https://twitter.com/vukefn" target="blank_">
+                    <img class="social-media" src="https://img.icons8.com/ios/50/000000/twitter--v1.png" />
                 </a>
             </div>
             <div class="nav-items-div">
                 <ul class="nav-list">
                     <li class="item">
-                        <a href="https://VukeFN.github.io/">HOME</a>
+                        <a href="https://VukeFN.github.io/Videos/videos.html">VIDEOS</a>
+                    </li>
+                    <li class="item">
+                        <a href="https://VukeFN.github.io/Videos/playlists.html">PLAYLISTS</a
+              >
+            </li>
+          </ul>
+          <ul class="nav-menu-button">
+            <ion-icon
+              name="menu-outline"
+              id="nav-menu-icon"
+              onclick="openNav()"
+            ></ion-icon>
+            <div class="nav-menu" id="nav-menu">
+              <li class="item">
+                <a href="https://VukeFN.github.io/Home/home.html">HOME</a>
                     </li>
                     <li class="item">
                         <a href="https://VukeFN.github.io/Videos/videos.html">VIDEOS</a>
@@ -29,21 +53,8 @@
                     <li class="item">
                         <a href="https://discord.gg/uzjyMmG">DISCORD</a>
                     </li>
-                </ul>
-                <ul class="nav-menu-button">
-                    <ion-icon name="menu-outline" id="nav-menu-icon" onclick="openNav()"></ion-icon>
-                    <div class="nav-menu" id="nav-menu">
-                        <li class="item">
-                            <a href="https://VukeFN.github.io/Home/home.html">HOME</a>
-                        </li>
-                        <li class="item">
-                            <a href="https://VukeFN.github.io/Videos/videos.html">VIDEOS</a>
-                        </li>
-                        <li class="item">
-                            <a href="https://discord.gg/uzjyMmG">DISCORD</a>
-                        </li>
-                    </div>
-                </ul>
+            </div>
+            </ul>
             </div>
         </nav>
     </header>
