Fixed unloaded images

--- a/Videos/videos.html
+++ b/Videos/videos.html
@@ -18,13 +18,13 @@
                 <a href="https://vukefn.github.io/"><img src="../Images/Website Logo.png" alt="Website's Logo" height="80" width="240" />
                 </a>
                 <a href="https://youtube.com/c/vukefn" target="blank_">
-                    <img class="social-media" src="https://img.icons8.com/ios/50/000000/youtube-play--v1.png" />
+                    <img class="social-media" src="../Images/YouTube.png" />
                 </a>
                 <a href="https://discord.gg/uzjyMmG" target="blank_">
-                    <img class="social-media" src="https://img.icons8.com/ios/50/000000/discord-logo--v1.png" />
+                    <img class="social-media" src="../Images/Discord.png" />
                 </a>
                 <a href="https://twitter.com/vukefn" target="blank_">
-                    <img class="social-media" src="https://img.icons8.com/ios/50/000000/twitter--v1.png" />
+                    <img class="social-media" src="../Images/Twitter.png" />
                 </a>
             </div>
             <div class="nav-items-div">
